# rust-mcmod

./: .gitignore  Cargo.toml  mod.json  mods.yaml  rustfmt.toml
src/: main.rs
